# MultiAgent

./: .gitignore  README.md  contributing.md  pyproject.toml  requirements.txt
sections/: .env  .gitignore  agents.py  config.py  custom.js  main.py  tools.py  workflow.py
sections/basic/: .env  agents.py
sections/basic/flagged/: log.csv
